tests/Data/Errors/SyntaxError/unexpectedSemicolon.php
<?php declare(strict_types = 1);

namespace ApiGenTests\Data\Errors\SyntaxError;


class ParserError;
